# ecogrid-agent

./: .env.example  .gitignore  001-architecture-foundations.md  CLAUDE.md  CONTEXT.md  DEVELOPER.md  README.md  conftest.py  docker-compose.yml  domain.md  issue-tracker.md  pyproject.toml  setup.sh  triage-labels.md
data/models/: .gitkeep  solar_forecast.joblib
data/policies/: grid_safety_sop_01.txt  grid_safety_sop_02.txt  grid_safety_sop_03.txt  grid_safety_sop_04.txt  grid_safety_sop_05.txt  market_trading_rules.txt  renewable_integration_policy.txt
data/raw/: README.md
infra/docker/: Dockerfile.api  Dockerfile.ingest  Dockerfile.worker
scripts/: seed_market_prices.py  seed_vector_db.py
services/agent/: CLAUDE.md  agent.py  config.py  prompts.py  tools.py
services/agent/prompts/: system.txt
services/agent/tests/: test_agent.py
services/api/: CLAUDE.md  main.py  schemas.py
services/api/tests/: test_routes.py
services/ml/: CLAUDE.md  data_prep.py  inference_module.py  model.py  train.py
services/ml/inference/: __init__.py  predictor.py
services/ml/tests/: __init__.py  test_model.py
services/rag/: CLAUDE.md  config.py  embedder.py  ingest.py  parser.py  retriever.py
services/rag/tests/: conftest.py  test_retriever.py
services/solver/: CLAUDE.md  __init__.py  engine.py  models.py
services/solver/tests/: test_engine.py
services/workers/: CLAUDE.md  celery_app.py  tasks.py
services/workers/tests/: test_tasks.py
shared/: contracts.py
