[tool.poetry]
name = "ecogrid-agent"
version = "0.1.0"
description = "Autonomous VPP orchestrator combining OR, ML, and LLM reasoning"
authors = ["Yusuf MM yusuf2000mm@gmail.com"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
langchain = "^0.2.0"
langchain-anthropic = "^0.1.0"
ortools = "^9.10.0"
xgboost = "^2.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
qdrant-client = "^1.9.0"
sentence-transformers = "^3.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
loguru = "^0.7.0"
joblib = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
