[project]
name = "ecogrid-agent"
version = "0.1.0"
description = "Autonomous VPP orchestrator combining OR, ML, and LLM reasoning"
authors = [{name = "Yusuf MM", email = "yusuf2000mm@gmail.com"}]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain (>=0.3,<0.4)",
    "langchain-anthropic>=0.1.0",
    "langchain-openai (>=0.2)",
    "ortools>=9.10.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "qdrant-client>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "loguru>=0.7.0",
    "joblib>=1.4.0",
    "fastembed (>=0.8.0,<0.9.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
